# bb-signals

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  emitter.hpp  signal.hpp  slot.hpp
include/detail/: executor_slot_state.hpp  function_slot_state.hpp  signal_state.hpp  slot_state.hpp
test/: CMakeLists.txt  signals_test.cpp
